PyMaker/datas/object2/RawHTML/i5001/Python_DOC_referPages.python-input-string-inside-webpage-search.txt
<div class="post-text" itemprop="text">
<p>I am very new to Python. I am trying to write a program that will take an IP address and use the search function on <a href="https://community.spiceworks.com/tools/ip-lookup/" rel="nofollow noreferrer">https://community.spiceworks.com/tools/ip-lookup/</a> to search that IP and return the results to me.</p>
<p>I wrote this: </p>
<pre><code>import selenium.webdriver as webdriver

def get_results(search_term):
    url = "https://community.spiceworks.com/tools/ip-lookup/"
    browser = webdriver.Firefox()
    browser.get(url)
    search_box = browser.find_element_by_id("ipaddress")
    search_box.send_keys(search_term)
    search_box.submit()
    try:
        tables = browser.find_element_by_class("in-card detail-list ember-view")
    results = []
    for table in tables:
        print(table)
        results.append(table)
    browser.close()

    return results
    print(results)

get_results("137.2.167.117")
</code></pre>
<p>(I used a random IP address) When I run this, I get: </p>
<pre><code>results = [] (with an arrow pointing to the "s" in results) SyntaxError: invalid syntax
</code></pre>
<p>Am I writing this code correctly? What is causing that error? And am I using the search function and results correctly? Searching this didn't return many results. Thanks!</p>
</div>
<div class="post-text" itemprop="text">
<p>As defined by the language a <code>try</code> block must be followed by an <code>except</code> or a <code>finally</code>: <a href="https://docs.python.org/3/reference/compound_stmts.html#try" rel="nofollow noreferrer">https://docs.python.org/3/reference/compound_stmts.html#try</a></p>
<pre><code>Python 3.5.2 (default, Nov 23 2017, 16:37:01) 
[GCC 5.4.0 20160609] on linux
Type "help", "copyright", "credits" or "license" for more information.
&gt;&gt;&gt; try:
...    print("foo")
... results = []
  File "&lt;stdin&gt;", line 3
    results = []
          ^
SyntaxError: invalid syntax
</code></pre>
<p>Your code fails for the same reason as the above snippet, the next statement (<code>results</code>) is neither a <code>except</code> or <code>finally</code>.</p>
</div>
<div class="post-text" itemprop="text">
<p>I haven't time to try to run the code because I don't have the selenium library at the moment, but just pasting it into Pycharm highlights a couple of issues:</p>
<ul>
<li>you need to define the <code>except</code> for your <code>try</code></li>
<li>if the <code>try</code> fails, tables is not going to be defined and will cause issues when reading it in the for loop</li>
<li><code>print(results)</code> after the return will never be reached</li>
</ul>
<p>What's causing the syntax error is the lack of <code>except</code>. A quick fix for the first two issues would be:</p>
<pre><code>try:
    tables = browser.find_element_by_class("in-card detail-list ember-view")
except:
    tables = []
</code></pre>
</div>
